Added second analysis question

--- a/index.ipynb
+++ b/index.ipynb
@@ -4569,6 +4569,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now we ask our next question:\n",
+    "- What is the average rating of each type of film."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
